--- a/frontend/src/app/initial-setup/initial-setup.component.css
+++ b/frontend/src/app/initial-setup/initial-setup.component.css
@@ -102,3 +102,12 @@ button:hover {
   color: #a54c87;
 
 }
+alert-danger {
+  color: red;
+  margin-top: 10px;
+}
+
+.text-danger {
+  color: red;
+  font-size: 1em;
+}
