--- a/frontend/src/app/add-expense/add-expense.component.css
+++ b/frontend/src/app/add-expense/add-expense.component.css
@@ -94,7 +94,7 @@ button:disabled {
   padding: 10px;
   display: flex;
   justify-content: space-around;
-  align-items: center;/
+  align-items: center;
 }
 
 .tip {
