--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,13 +1,11 @@
-<!-- home.component.html -->
-<div class="landing-page">
-    <div class="content">
-      <h1>Welcome to Budget Tracker</h1>
-      <p class="intro-text">Take control of your finances. Start saving smart and track your expenses effectively.</p>
+<div class="home-container">
+  <div class="content">
+      <h1>Welcome to <span class="highlight">Budget Tracker</span></h1>
+      <p class="intro-text">Take control of your finances with ease. Start saving smartly and track your expenses effectively.</p>
       <blockquote class="quote">"A penny saved is a penny earned." - Benjamin Franklin</blockquote>
       <div class="action-buttons">
-        <button class="action-button action-button-primary" [routerLink]="['/register']">Register</button>
-        <button class="action-button action-button-secondary" [routerLink]="['/login']">Log In</button>
+          <button class="action-button action-button-primary" [routerLink]="['/register']">Register</button>
+          <button class="action-button action-button-secondary" [routerLink]="['/login']">Log In</button>
       </div>
-    </div>
   </div>
-  
+</div>
